--- a/Galeri.html
+++ b/Galeri.html
@@ -137,7 +137,7 @@
     <div class="row text-center">
       <div class="col">
         <img src="foto keluarga1.jpeg" class="img-thumbnail rounded" alt="Rounded" data-bs-toggle="modal" data-bs-target="#modal6">
-        <div class="small mt-2 text-muted">/div>
+        <div class="small mt-2 text-muted"></div>
       </div>
       <div class="col">
         <img src="foto keluarga2.jpeg" class="img-thumbnail rounded-top" alt="Rounded Top" data-bs-toggle="modal" data-bs-target="#modal7">
