--- a/Tentang.html
+++ b/Tentang.html
@@ -37,12 +37,13 @@
     </div>
     </center>
     <br>
-    <!-- Bagian Tentang -->
-    <section id="tentang" class="py-5">
-      <h2 class="text-center mb-4">TENTANG</h2>
+    <!-- Bagian Tentang dengan Background -->
+<div class="card p-4 shadow-sm mb-4" style="background-color:white; width: 100%; max-width: 900px; margin: auto;">
+  <h2 class="text-center mb-3">Tentang</h2>
+</div>
 
       <div class="card p-4 shadow-sm">
-        <h3 class="text-center mb-4">Deskripsi Diri</h3>
+        <h4 class="text-center mb-4">Deskripsi Diri</h4>
 
         <div class="row">
           <!-- Video di sebelah kiri -->
@@ -63,7 +64,7 @@
                     pink juga bagus tau cuma gatau kenapa sukanya warna hitam. kalo ga warna hitam warna putih gais nah
                     terus kalo film kesukaan ngga ada gais soalnya ngga suka nonton film sukanya nonton anime, anime kesukaan saya tuh one piece kalo dione piece yang paling saya suka zoro gais soalnya dia ganteng terus kalo lagu kesukaan mangu,
                     mangu tuh gais lagu beda agama yang lagi viral sekarang terus ngomong apa lagi ya,kayanya udah itu
-                    aja ngga sih gaiss perkenalan kali ini sekian dari saya wassalamualaikum warahmatullahi wabarakatuh</p></p>
+                    aja ngga sih gaiss perkenalan kali ini sekian dari saya wassalamualaikum warahmatullahi wabarakatuh.</p></p>
           </div>
         </div>
       </div>
