--- a/Galeri.html
+++ b/Galeri.html
@@ -132,6 +132,92 @@
     </div>
   </div>
   <div class="container py-5">
+    <h2 class="text-center mb-4">Foto Keluarga</h2>
+
+    <div class="row text-center">
+      <div class="col">
+        <img src="foto keluarga1.jpeg" class="img-thumbnail rounded" alt="Rounded" data-bs-toggle="modal" data-bs-target="#modal6">
+        <div class="small mt-2 text-muted"></div>
+      </div>
+      <div class="col">
+        <img src="foto keluarga2.jpeg" class="img-thumbnail rounded-top" alt="Rounded Top" data-bs-toggle="modal" data-bs-target="#modal7">
+        <div class="small mt-2 text-muted"></div>
+      </div>
+      <div class="col">
+        <img src="foto keluarga3.jpeg" class="img-thumbnail rounded-end" alt="Rounded End" data-bs-toggle="modal" data-bs-target="#modal8">
+        <div class="small mt-2 text-muted"></div>
+      </div>
+      <div class="col">
+        <img src="foto keluarga4.jpeg" class="img-thumbnail rounded-bottom" alt="Rounded Bottom" data-bs-toggle="modal" data-bs-target="#modal9">
+        <div class="small mt-2 text-muted"></div>
+      </div>
+      <div class="col">
+        <img src="foto keluarga 5.jpeg" class="img-thumbnail rounded-start" alt="Rounded Start" data-bs-toggle="modal" data-bs-target="#modal10">
+        <div class="small mt-2 text-muted"></div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal 1 -->
+  <div class="modal fade" id="modal6" tabindex="-1" aria-labelledby="modalLabel6" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-body text-center">
+          <img src="foto keluarga1.jpeg" class="img-fluid mb-3" alt="Rounded" width="250px" height="150px">
+          <p>foto waktu lagi lebarang</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal 2 -->
+  <div class="modal fade" id="modal7" tabindex="-1" aria-labelledby="modalLabel7" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-body text-center">
+          <img src="foto keluarga2.jpeg" class="img-fluid mb-3" alt="Rounded Top" width="250px" height="150px">
+          <p>foto waktu lagi lebarang</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal 3 -->
+  <div class="modal fade" id="modal8" tabindex="-1" aria-labelledby="modalLabel8" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-body text-center">
+          <img src="foto keluarga3.jpeg" class="img-fluid mb-3" alt="Rounded End" width="250px" height="150px">
+          <p>foto waktu lagi lebarang</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal 4 -->
+  <div class="modal fade" id="modal9" tabindex="-1" aria-labelledby="modalLabel9" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-body text-center">
+          <img src="foto keluarga4.jpeg" class="img-fluid mb-3" alt="Rounded Bottom" width="250px" height="150px">
+          <p>foto waktu lagi lebarang</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal 5 -->
+  <div class="modal fade" id="modal10" tabindex="-1" aria-labelledby="modalLabel10" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-body text-center">
+          <img src="foto keluarga 5.jpeg" class="img-fluid mb-3" alt="Rounded Start" width="250px" height="150px">
+          <p>foto waktu lagi lebarang</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container py-5">
     <h2 class="text-center mb-4">Foto Teman</h2>
 
     <div class="row text-center">
